# SVO2-Handler

./: .gitignore  BENCHMARK_APP_FEATURES.md  BUGFIX_FRAME_SKIP.md  BUGFIX_PART2_SUMMARY.md  BUGFIX_SUMMARY.md  BUGFIX_SVO_THREADING.md  FINAL_UPDATES.md  FRAME_SKIP_FEATURE.md  GUI_ENHANCEMENT_COMPLETE.md  GUI_OPTIMIZATION_SUMMARY.md  GUI_RESTORATION_FIX.md  Grab_Performance_Python_vs_Cpp  IMPLEMENTATION_SUMMARY.md  JETSON_MODEL_USAGE.md  NEURAL_DEPTH_UPDATE.md  PC_TRAINING_TRANSITION.md  PERFORMANCE_ANALYSIS_FEATURES.md  README.md  README.md.backup  TEST_GUIDE_SVO2.md  pyzed-5.0-cp310-cp310-linux_aarch64.whl  requirements.txt  setup.cfg  verify_pc_setup.py
.github/: copilot-instructions.md
docs/: ENHANCED_GUI_IMPLEMENTATION.md  INDEX.md  applications.md  architecture.md  architecture.md.old  benchmark-scenarios.md  coding-guidelines.md  depth-analysis-guide.md  fieldtest-learnings.md  jetson-benchmark-suite.md  jetson-setup-guide.md  live-vs-svo2-performance.md  pc-setup-guide.md  performance-analysis-guide.md  performance-testing-summary.md  python-vs-cpp-comparison.md  rectified-vs-unrectified-images.md  roadmap.md  roi-depth-performance.md  svo-benchmark-scenario.md  training-guide.md  yolo-training-structure.md
docs/archive/: frame-export.md  output-root.md  status.md  viewer-annotator-plan.md
scripts/: build_cpp_test.sh  build_tensorrt_engine.py  enhanced_gui_reference.py  fix_cudnn_training.py  overlay_yolo_annotations.py  svo2_grab_speed_test.cpp  svo2_grab_speed_test.py  svo2_grab_test_cpp  test_inference.py
src/svo_handler/: __init__.py  benchmark_app.py  (+18 more)
