[metadata]
name = svo2-handler
version = 0.0.1
description = GUI tool for SVO2 frame and depth extraction
author = Angelo

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    PySide6>=6.6
    opencv-python>=4.9.0
    numpy>=1.24.0

[options.packages.find]
where = src
